--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.12.0",
     "react-awesome-button": "^6.4.0",
     "react-awesome-slider": "^3.1.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "react-icons": "^4.2.0"
   }
 }
